--- a/app/src/main/res/layout/news_item3.xml
+++ b/app/src/main/res/layout/news_item3.xml
@@ -6,9 +6,8 @@
     android:layout_height="200dp"
     android:orientation="vertical">
 
-    <VideoView
+    <TextureView
         android:id="@+id/news_video"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-
 </LinearLayout>
