--- a/plugin/src/main/res/layout/activity_main.xml
+++ b/plugin/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="#000"
         android:text="This is plugin!!!!"
         android:textSize="20sp" />
 
